# fourier-spirograph

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/fft/: Base.hpp  DFT.hpp  Framework.hpp  GUI.hpp  HotReload.hpp  Math.hpp  Vectorize.hpp  stdafx.hpp
src/: Base.cpp  CMakeLists.txt  DFT.cpp  Framework.cpp  GUI.cpp  Vectorize.cpp  main.cpp  stdafx.cpp
